This add a client command to hector.
Changes default config settings.
Fixes spelling errors in documentation.
Adds module sources and config docs to setup.cfg.
Changes /snapshots to documented /snapshot.

Hector v1.01a

--- a/settings/restore-cassandra.yaml
+++ b/settings/restore-cassandra.yaml
@@ -97,7 +97,7 @@ permissions_validity_in_ms: 2000
 #
 # See http://wiki.apache.org/cassandra/Operations for more on
 # partitioners and token selection.
-partitioner: org.apache.cassandra.dht.Murmur3Partitioner
+partitioner: org.apache.cassandra.dht.RandomPartitioner
 
 # Directories where Cassandra should store data on disk.  Cassandra
 # will spread data evenly across them, subject to the granularity of
