--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,7 @@ data_files =
     etc/hector =
         settings/config.py
         settings/restore-cassandra-1.1.yaml
+        settings/restore-cassandra-1.2.yaml
         settings/restore-cassandra.yaml
     /var/www/hector =
         build/html/example.html
@@ -39,7 +40,10 @@ data_files =
 	build/html/hector.html
 	build/html/hector.settings.html
 	build/html/http.html
+	build/html/contact.html
+	build/html/config.html
 	build/html/index.html
+	build/html/py-modindex.html
 	build/html/install.html
 	build/html/modules.html
 	build/html/objects.inv
@@ -64,7 +68,10 @@ data_files =
 	build/html/_modules/hector/cassandra.html
 	build/html/_modules/hector/cassandra_log.html
 	build/html/_modules/hector/hector.html
-	 build/html/_modules/hector/utils.html
+	build/html/_modules/hector/client.html
+	build/html/_modules/hector/utils.html
+    /var/www/hector/_modules/settings/ = 
+	build/html/_modules/settings/config.html
     /var/www/hector/_static =
 	build/html/_static/ajax-loader.gif
 	build/html/_static/basic.css
