Renames Hector to Polites.
Minor Fix(es) for changing /snapshots -> /snapshot for client
Expands Test Coverage and Fixes entails.
Update Documentation for autodoc updates.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = hector
+name = polites
 version = v1.0
 summary = Cassandra Agent Configurator
 description-file = Readme.md
@@ -27,52 +27,38 @@ classifier =
 
 
 [files]
-packages = hector
+packages = polites
 data_files =
-    etc/hector =
+    etc/polites =
         settings/config.py
         settings/restore-cassandra-1.1.yaml
         settings/restore-cassandra-1.2.yaml
         settings/restore-cassandra.yaml
-    /var/www/hector =
+    /var/www/polites =
         build/html/example.html
 	build/html/genindex.html
-	build/html/hector.html
-	build/html/hector.settings.html
+	build/html/polites.html
+	build/html/polites.settings.html
 	build/html/http.html
 	build/html/contact.html
 	build/html/config.html
 	build/html/index.html
 	build/html/py-modindex.html
 	build/html/install.html
-	build/html/modules.html
 	build/html/objects.inv
 	build/html/py-modindex.html
 	build/html/search.html
 	build/html/searchindex.js
 	build/html/uses.html
-    /var/www/hector/_sources =
+    /var/www/polites/_sources =
 	build/html/_sources/example.txt
-	build/html/_sources/hector.settings.txt
-	build/html/_sources/hector.txt
+	build/html/_sources/polites.settings.txt
+	build/html/_sources/polites.txt
  	build/html/_sources/http.txt
  	build/html/_sources/index.txt
  	build/html/_sources/install.txt
-	build/html/_sources/modules.txt
  	build/html/_sources/uses.txt
-    /var/www/hector/_modules =
-	build/html/_modules/index.html
-    /var/www/hector/_modules/hector/ =
-	build/html/_modules/hector/agent.html
-	build/html/_modules/hector/backwards.html
-	build/html/_modules/hector/cassandra.html
-	build/html/_modules/hector/cassandra_log.html
-	build/html/_modules/hector/hector.html
-	build/html/_modules/hector/client.html
-	build/html/_modules/hector/utils.html
-    /var/www/hector/_modules/settings/ = 
-	build/html/_modules/settings/config.html
-    /var/www/hector/_static =
+    /var/www/polites/_static =
 	build/html/_static/ajax-loader.gif
 	build/html/_static/basic.css
 	build/html/_static/comment-bright.png
@@ -96,7 +82,7 @@ data_files =
         
 [entry_points]
 console_scripts =
-    hector = hector.agent:main
+    polites = polites.agent:main
 
 
 [build_sphinx]
